--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -50,7 +50,7 @@ When you use the multi-index search endpoint, Meilisearch returns an array of re
 	"results": [
 	  {
 	    "indexUid": "products",
-	    "hits": [...],
+	    "hits": […],
 	    "query": "Nike",
 	    "processingTimeMs": 1,
 	    "limit": 1,
