--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -59,7 +59,7 @@ When you use the multi-index search endpoint, Meilisearch returns an array of re
 	  },
 	  {
 	    "indexUid": "brands",
-	    "hits": [...],
+	    "hits": […],
 	    "query": "Nike",
 	    "processingTimeMs": 0,
 	    "limit": 1,
