--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -78,7 +78,7 @@ When using the `facets` parameter during a search, statistics about the distribu
 
 Done by @dureuill in #3423.
 
-## Geo-search improvements: introcdution of `geoBoundingBox`
+## New geosearch filter: `_geoBoundingBox`
 
 When doing a filter (with the `filter` parameter) during the search, you can now use the `geoBoundingBox`: `_geoBoundingBox([lat, lng], [lat, lng])`, where the first argument is the top left corner, and the second one the bottom right corner.
 
