--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -80,7 +80,16 @@ Done by @dureuill in #3423.
 
 ## New geosearch filter: `_geoBoundingBox`
 
-When doing a filter (with the `filter` parameter) during the search, you can now use the `geoBoundingBox`: `_geoBoundingBox([lat, lng], [lat, lng])`, where the first argument is the top left corner, and the second one the bottom right corner.
+Use the `filter` search parameter and the `_geoBoundingBox` filter expression to obtain results contained within a specific geographic area.
+
+```bash
+curl \
+  -X POST 'http://localhost:7700/indexes/restaurants/search' \
+  -H 'Content-type:application/json' \
+  --data-binary '{ "filter": "_geoBoundingBox([45.472735, 9.184019],[45.473711, 9.185613] )" }'
+```
+
+`_geoBoundingBox([lat, lng], [lat, lng])` accepts two parameters: one array specifying the top left corner, and a second array specifying the bottom right corner.
 
 Done by @gmourier and @irevoire in #3405 and #3529.
 
