--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -93,7 +93,7 @@ curl \
 
 Done by @gmourier and @irevoire in #3405 and #3529.
 
-## Lifting the limits on index size and count
+## Removing limits on index size and count
 
 Before v1.0, the maximum size of an index on disk was limited according to the `--max-index-size` CLI parameter, and the number of indexes that could be accessed by one Meilisearch process would depend on this value (typically, about 1000 indexes with the default setting of 100GiB for `--max-index-size`).
 
