--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -103,7 +103,7 @@ The removal of `--max-index-size` was made in preparation for this release: you 
 
 Done by @dureuill in #3319, #3331 and #3544.
 
-## Experimental feature: monitore the Meilisearch usage by using Prometheus
+## Experimental feature: monitor Meilisearch usage with Prometheus
 
 This release introduces an experimental feature to follow your metrics by using Prometheus.
 
