--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -105,7 +105,7 @@ Done by @dureuill in #3319, #3331 and #3544.
 
 ## Experimental feature: monitor Meilisearch usage with Prometheus
 
-This release introduces an experimental feature to follow your metrics by using Prometheus.
+This release introduces an experimental feature allowing you to monitor metrics with  [Prometheus](https://prometheus.io/).
 
 When launching Meilisearch, use the following flag:
 
