--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -138,7 +138,7 @@ Done in #3347 and on the [Charabia side](https://github.com/meilisearch/charabia
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
 * Reduce crate size (from ~200MB to ~50MB) by compressing dictionaries (#3347) @ManyTheFish
 <!-- The following line should NOT be put in RC0 release changelogs because not present yet -->
-* Cache the result of the indexes stats (#3541) @irevoire
+* Cache the indexes stats results (#3541) @irevoire
 
 # Fixes 🐞
 
