--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -115,7 +115,7 @@ meilisearch --experimental-enable-metrics
 
 The `/metrics` route will be available and compatible with Prometheus.
 
-🗣️ Since this feature is experimental, we need you to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/3518).
+🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/3518).
 
 ⚠️ The experimental feature API can break between 2 versions of Meilisearch. Be careful if using it in production.
 
