--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -8,7 +8,7 @@ Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now
 Additional new features include: `geoBoundingBox` geosearch filter, addition of a `facetStats` objects to queries using the `facets` search parameters, and customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
-🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes this can take up to 48 hours, depending on the issues we encounter during the release.
+🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version between 4 to 48 hours after the release.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 Here is the exhaustive list of integrations **not immediately compatible** with v1.1.0:
