--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -121,7 +121,7 @@ Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 
 * Enhance Greek support by normalizing diacritics and final sigma
 * Enhance Arabic support by ignoring Tatweel
-* Enhance language detection: the language is now detected when indexing to prevent from wrong language detections during the search
+* Enhance language detection: detection now happens during indexing, reducing erroneous language recognition during search
 
 Done in #3347 and on the [Charabia side](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
 
