--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -113,7 +113,7 @@ The `/metrics` route will be available and compatible with Prometheus.
 
 🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/3518).
 
-⚠️ The experimental feature API can break between 2 versions of Meilisearch. Be careful if using it in production.
+⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
 
 Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 
