--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -123,7 +123,7 @@ Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 * Enhance Arabic support by ignoring Tatweel
 * Enhance language detection: detection now happens during indexing, reducing erroneous language recognition during search
 
-Done in #3347 and on the [Charabia side](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
+Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
 
 ## Other improvements
 
