--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -128,7 +128,7 @@ Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases
 ## Other improvements
 
 * Allow wildcards (`*`) at the end of index names when creating API keys or tenant tokens (#3174) @Kerollmops & @akhildevelops
-* Customize the CSV delimiter (default: `,`) by using the `csvDelimiter` parameter during the document addition and update (#3505, #3534) @MixusMinimax and @irevoire
+* Customize the CSV delimiter (default: `,`) with the `csvDelimiter` parameter in the document addition and update endpoint (#3505, #3534) @MixusMinimax and @irevoire
 * Improve error messages: introduction of "did you mean ...?" suggestions when doing typos on a Meilisearch parameter (#3492) @irevoire
 * Batch together addition and deletion tasks to speed up indextation. You don't have to do anything to activate it, just enjoy! (#3470) @irevoire
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
