--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -74,7 +74,33 @@ Done by @dureuill in #3417
 
 ## Introduce `facetStats`
 
-When using the `facets` parameter during a search, statistics about the distributed facets are displayed in a `facetStats` object. This object will contain the minimum (`min`) and the maximum (`max`) of each numerical facet corersponding to search query.
+Queries containing the `facets` parameter now include a `facetStats` object by default:
+
+```bash
+curl \
+  -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "facets": ["price"]
+  }'
+```
+
+`facetStats` only lists facets containing numerical values. Facets with other values are not included in the `facetStats` object. This object contains the minimum (`min`) and the maximum (`max`) of each numerical facet:
+
+```json
+{
+  "hits": […],
+  "facetDistribution": {
+    "price": {…}
+  },
+  "facetStats": {
+    "price": {
+      "min": 2,
+      "max": 60
+    }
+  }
+}
+```
 
 Done by @dureuill in #3423.
 
@@ -130,7 +156,7 @@ Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases
 * Allow wildcards (`*`) at the end of index names when creating API keys or tenant tokens (#3174) @Kerollmops & @akhildevelops
 * Customize the CSV delimiter (default: `,`) with the `csvDelimiter` parameter in the document addition and update endpoint (#3505, #3534) @MixusMinimax and @irevoire
 * Improve error messages: introduction of "did you mean ...?" suggestions when doing typos on a Meilisearch parameter (#3492) @irevoire
-* Batch together addition and deletion tasks to speed up indextation. You don't have to do anything to activate it, just enjoy! (#3470) @irevoire
+* Automatically batch addition and deletion tasks together to speed up indexing (#3470) @irevoire
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
 * Reduce crate size (from ~200MB to ~50MB) by compressing dictionaries (#3347) @ManyTheFish
 <!-- The following line should NOT be put in RC0 release changelogs because not present yet -->
@@ -157,7 +183,7 @@ The following changes do not impact user experience.
   * Update comments in version bump CI (#3519) @curquiza
   * Fix cargo flaky (#3348) @irevoire
   * Make clippy happy for Rust 1.67, allow `uninlined_format_args` (#3434) @dureuill
-* Documentation
+* Internal documentation
   * Fixup `dumps-destination` into `dump-directory` section header in help link (#3199) @dureuill
   * Add prototype guide to CONTRIBUTING.md (#3433) @curquiza
   * Rework technical information in the README (#3399) @curquiza
