--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -85,7 +85,7 @@ curl \
   }'
 ```
 
-`facetStats` only lists facets containing numerical values. Facets with other values are not included in the `facetStats` object. This object contains the minimum (`min`) and the maximum (`max`) of each numerical facet:
+`facetStats` only lists facets containing numerical values. Facets with other types of values are not included in the `facetStats` object. This object contains the minimum (`min`) and the maximum (`max`) of each numerical facet:
 
 ```json
 {
