Update after rc1

--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -149,7 +149,7 @@ Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 * Enhance Arabic support by ignoring Tatweel
 * Enhance language detection: detection now happens during indexing, reducing erroneous language recognition during search
 
-Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
+Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
 
 ## Other improvements
 
@@ -159,7 +159,6 @@ Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases
 * Automatically batch addition and deletion tasks together to speed up indexing (#3470) @irevoire
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
 * Reduce crate size (from ~200MB to ~50MB) by compressing dictionaries (#3347) @ManyTheFish
-<!-- The following line should NOT be put in RC0 release changelogs because not present yet -->
 * Cache the indexes stats results (#3541) @irevoire
 
 # Fixes 🐞
@@ -169,6 +168,8 @@ Done in #3347 and on [Charabia](https://github.com/meilisearch/charabia/releases
 * Unify "Bad latitude" and "Bad longitude" errors (#3479) @cymruu
 * Prevent "Cannot allocate memory" errors when creating a lot of indexes (#3331) @dureuill
 * Fix Japanese support (see [the related issue](https://github.com/meilisearch/meilisearch/issues/2403)) thanks to the new language detection (#3347) @ManyTheFish
+* Remove `MDB_BAD_VALSIZE` error by avoiding fetching an LMDB value with an empty string (#3577) @Kerollmops
+* Fix the snapshots permissions on Unix system (#3561) @irevoire
 
 # Misc
 
@@ -176,6 +177,7 @@ The following changes do not impact user experience.
 
 * GitHub CIs & test suite
   * Create a preview environment for every PR using Uffizzi (#3040 and #3482) @waveywaves
+  * Improve `publish-aarch64` job that used ubuntu-18.04 (#3568) @curquiza
   * Add tests with rust nightly in CI (#3495) @ztkmkoo
   * Add `--all` to test CI (#3403) @curquiza
   * Remove cache from test CI to prevent Windows CI failures (#3422) @curquiza
