Add japanese information in release notes

--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -149,6 +149,9 @@ Done by @irevoire, @dureuill, and @james-2001 in #3496, #3524, #3538 and #3543.
 * Enhance Arabic support by ignoring Tatweel
 * Enhance language detection: detection now happens during indexing, reducing erroneous language recognition during search
 
+🇯🇵 For people using Japanese datasets, language detection might still fail on small datasets. For instance, a song dataset that only contains titles in Japanese will still be detected as Chinese.<br>
+If you encounter any issue, we recommend you use [this prototype](https://github.com/meilisearch/meilisearch/pull/3588) which is an alternative version of Meilisearch v1.1 for Japanese users. Please, let us know about any feedback you may have in [this dicussion](https://github.com/meilisearch/product/discussions/532).
+
 Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/releases/tag/v0.7.1) by @choznerol, @cymruu, @james-2001 and @ManyTheFish.
 
 ## Other improvements
