Add information about SDKs

--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -8,11 +8,7 @@ Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now
 Additional new features include: `geoBoundingBox` geosearch filter, addition of a `facetStats` objects to queries using the `facets` search parameters, and customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
-🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version between 4 to 48 hours after the release.
-
-<!-- The following lines should ONLY be put in the official release changelogs -->
-Here is the exhaustive list of integrations **not immediately compatible** with v1.1.0:
-TBD
+🧰 All the integrations (SDKs, clients, libraries) will be compatible with this new Meilisearch version between 4 to 48 hours after the release. However, some new feature usages might miss in the less used integrations. Detailed information are available in each related SDK repository. You can let us know there if something is missing, or contribute directly to the repository. Every contribution is welcome! ❤️
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 Meilisearch's official documentation will be ready for the official v1.1.0 release. Meanwhile, work-in-progress documentation is available [here]().
