--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -8,7 +8,9 @@ Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now
 Additional new features include: `geoBoundingBox` geosearch filter, addition of a `facetStats` objects to queries using the `facets` search parameters, and customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
-🧰 All the integrations (SDKs, clients, libraries) will be compatible with this new Meilisearch version between 4 to 48 hours after the release. However, some new feature usages might miss in the less used integrations. Detailed information are available in each related SDK repository. You can let us know there if something is missing, or contribute directly to the repository. Every contribution is welcome! ❤️
+🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available. 
+
+Some SDKs might not include all new features—consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that <3).
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 Meilisearch's official documentation will be ready for the official v1.1.0 release. Meanwhile, work-in-progress documentation is available [here]().
