--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -156,7 +156,7 @@ Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/r
 
 * Allow wildcards (`*`) at the end of index names when creating API keys or tenant tokens (#3174) @Kerollmops & @akhildevelops
 * Customize the CSV delimiter (default: `,`) with the `csvDelimiter` parameter in the document addition and update endpoint (#3505, #3534) @MixusMinimax and @irevoire
-* Improve error messages: introduction of "did you mean ...?" suggestions when doing typos on a Meilisearch parameter (#3492) @irevoire
+* Improve error messages: introduction of "did you mean ...?" suggestions when making typos in a Meilisearch parameter (#3492) @irevoire
 * Automatically batch addition and deletion tasks together to speed up indexing (#3470) @irevoire
 * Accept `null` as a valid `_geo` field when importing or updating documents (#3515) @irevoire
 * Reduce crate size (from ~200MB to ~50MB) by compressing dictionaries (#3347) @ManyTheFish
