--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -5,7 +5,7 @@
 
 Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now use one single HTTP request to perform different searches in multiple indexes.
 
-Additional new features include: `geoBoundingBox` geosearch filter, addition of a `facetStats` objects to queries using the `facets` search parameters, and customization of CSV separators.
+Additional new features include: the `geoBoundingBox` geosearch filter, the addition of a `facetStats` object to queries using the `facets` search parameter, and the customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available. 
