--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -170,7 +170,7 @@ Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/r
 * Prevent "Cannot allocate memory" errors when creating a lot of indexes (#3331) @dureuill
 * Fix Japanese support (see [the related issue](https://github.com/meilisearch/meilisearch/issues/2403)) thanks to the new language detection (#3347) @ManyTheFish
 * Remove `MDB_BAD_VALSIZE` error by avoiding fetching an LMDB value with an empty string (#3577) @Kerollmops
-* Fix the snapshots permissions on Unix system (#3561) @irevoire
+* Fix snapshot permissions on Unix system (#3561) @irevoire
 
 # Misc
 
