--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -24,18 +24,18 @@ Perform searches in multiple indexes in a single HTTP request using the new `/mu
 ```bash
 curl \
   -X POST 'http://localhost:7700/multi-search' \
-  -H 'Content-Type: application/json'
+  -H 'Content-Type: application/json' \
   --data-binary '{
     "queries": [
-       {
-         "indexUid": "products",
-         "q": "Nike",
-         "limit": 1
-       },
       {
-         "indexUid": "brands",
-         "q": "Nike",
-         "limit": 1
+        "indexUid": "products",
+        "q": "Nike",
+        "limit": 1
+      },
+      {
+        "indexUid": "brands",
+        "q": "Nike",
+        "limit": 1
       }
     ]
   }'
