--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -113,7 +113,7 @@ curl \
   --data-binary '{ "filter": "_geoBoundingBox([45.472735, 9.184019],[45.473711, 9.185613] )" }'
 ```
 
-`_geoBoundingBox([lat, lng], [lat, lng])` accepts two parameters: one array specifying the top left corner, and a second array specifying the bottom right corner.
+`_geoBoundingBox([lat, lng], [lat, lng])` accepts two parameters: one array specifying the top right corner, and a second array specifying the bottom left corner.
 
 Done by @gmourier and @irevoire in #3405 and #3529.
 
