Addition following rc2

--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -8,7 +8,7 @@ Meilisearch v1.1.0 introduces the much-requested multi-index search! You can now
 Additional new features include: the `geoBoundingBox` geosearch filter, the addition of a `facetStats` object to queries using the `facets` search parameter, and the customization of CSV separators.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
-🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available. 
+🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
 
 Some SDKs might not include all new features—consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that <3).
 
@@ -170,7 +170,8 @@ Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/r
 * Prevent "Cannot allocate memory" errors when creating a lot of indexes (#3331) @dureuill
 * Fix Japanese support (see [the related issue](https://github.com/meilisearch/meilisearch/issues/2403)) thanks to the new language detection (#3347) @ManyTheFish
 * Remove `MDB_BAD_VALSIZE` error by avoiding fetching an LMDB value with an empty string (#3577) @Kerollmops
-* Fix snapshot permissions on Unix system (#3561) @irevoire
+* Fix snapshots permissions on Unix system (#3561) @irevoire
+* Ensure the task queue is correctly imported (#3597) @irevoire
 
 # Misc
 
