--- a/meilisearch-release-changelog/v1.1.0.md
+++ b/meilisearch-release-changelog/v1.1.0.md
@@ -165,13 +165,14 @@ Done in #3347, #3569 and on [Charabia](https://github.com/meilisearch/charabia/r
 # Fixes 🐞
 
 * Improve facet string normalization: fixes issues when using `sortBy` with accented characters (#3372) @ManyTheFish
-* Fix web interface issues: bump version of search preview to [v0.2.6](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.6) (#3514) @bidoubiwa
+* Fix web interface issues: bump version of search preview to [v0.2.7](https://github.com/meilisearch/mini-dashboard/releases/tag/v0.2.7) (#3623) @bidoubiwa
 * Unify "Bad latitude" and "Bad longitude" errors (#3479) @cymruu
 * Prevent "Cannot allocate memory" errors when creating a lot of indexes (#3331) @dureuill
 * Fix Japanese support (see [the related issue](https://github.com/meilisearch/meilisearch/issues/2403)) thanks to the new language detection (#3347) @ManyTheFish
 * Remove `MDB_BAD_VALSIZE` error by avoiding fetching an LMDB value with an empty string (#3577) @Kerollmops
 * Fix snapshots permissions on Unix system (#3561) @irevoire
 * Ensure the task queue is correctly imported (#3597) @irevoire
+* Fix facet normalization (#3621) @ManyTheFish
 
 # Misc
 
