--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -57,7 +57,24 @@ Done by @Kerollmops in #3571.
 
 ## Improve relevancy and search performance
 
-TBD
+- The fastest 75 percents of queries now consistently answer below 50ms on our test setup (TBC on the cloud).
+- The complexity of a search query is now limited, in order to limit CPU time and RAM consumption. In more details:
+  - The number of typo considered for a single term is now limited to 150 for 1 typo, 50 for 2 typos. Similarly, the number of considered (single word or multi word) synonyms is limited to 50, the total number of words for all synonyms of a term is limited to 100.
+  - The number of words considered in a query is now limited to 1000. The number of terms (words not inside a phrase, and individual phrases) was and is still limited to 10, so this change only impacts queries containing very long phrases.
+
+### Performance of `geosort`
+
+- Improved performance when there are only a few documents to geosort.
+- Descending sort is now as performant as ascending sort.
+
+### Relevancy improvements
+
+- Synonyms are no longer considered as exact matches by the `exactness` ranking rule. This change is due to the goal of the `exactness` ranking rule of boosting the documents that contain the query exactly as typed by the user. Other ranking rules will still consider synonyms.
+- `Attributes`, `Exactness`, `typo` and `proximity` ranking rules now imply `words` if `words` was not already specified before them. This change was made because the behavior of applying these ranking rules before or without `words` was unintuitive and could hurt relevancy.
+- Split words are now looked for for digrams. This means that the query `whit ehorse` may now match documents containing `white horse`, which improves the relevancy of typo tolerance.
+- ngrams and split words are now disadvantaged in comparison to the exact word in the `typo` ranking rule.
+- Exactness will not prioritize documents containing exact words which were previously removed by the `words` ranking rule anymore. For example, when using the query `Batman: the dark knight rises` with the default term matching strategy (`last`), documents with a title starting with `Batman: the dark knight` will now be returned before documents that contain additional terms like `Batman: the dark knight crashes`, which improves relevancy. Congratulations if you read so far. Similarly, with the query: `Batman the supercalifragilisticexpialidocious knight rises`. Then the `Last` term matching strategy will reduce the query to `Batman the`. Exactness will then only prioritise documents that contain the exact words `Batman` and `the` but not `supercalifragilisticexpialidocious`, `knight`, or `rises`. 
+
 
 Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
