Add issues resolved by the search refactor
- Add list of performance issues resolved by the refactor
- Add some issue numbers where possible for relevancy issues resolved by the refactor
- Add a list of features unblocked by the refactor

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -57,10 +57,11 @@ Done by @Kerollmops in #3571.
 
 ## Improve relevancy and search performance
 
-- The fastest 75 percents of queries now consistently answer below 50ms on our test setup (TBC on the cloud).
+- The fastest 75 percent of queries now consistently answer below 50ms on our test setup (TBC on the cloud).
 - The complexity of a search query is now limited, in order to limit CPU time and RAM consumption. In more details:
   - The number of typo considered for a single term is now limited to 150 for 1 typo, 50 for 2 typos. Similarly, the number of considered (single word or multi word) synonyms is limited to 50, the total number of words for all synonyms of a term is limited to 100.
   - The number of words considered in a query is now limited to 1000. The number of terms (words not inside a phrase, and individual phrases) was and is still limited to 10, so this change only impacts queries containing very long phrases.
+- Solves some performance issues: https://github.com/meilisearch/meilisearch/issues/3124, https://github.com/meilisearch/meilisearch/issues/3378, https://github.com/meilisearch/meilisearch/issues/2202, https://github.com/meilisearch/meilisearch/issues/3123
 
 ### Performance of `geosort`
 
@@ -69,12 +70,22 @@ Done by @Kerollmops in #3571.
 
 ### Relevancy improvements
 
-- Synonyms are no longer considered as exact matches by the `exactness` ranking rule. This change is due to the goal of the `exactness` ranking rule of boosting the documents that contain the query exactly as typed by the user. Other ranking rules will still consider synonyms.
+- Synonyms are no longer considered as exact matches by the `exactness` ranking rule. This change is due to the goal of the `exactness` ranking rule of boosting the documents that contain the query exactly as typed by the user. Other ranking rules will still consider synonyms. Solves https://github.com/meilisearch/meilisearch/issues/3410
 - `Attributes`, `Exactness`, `typo` and `proximity` ranking rules now imply `words` if `words` was not already specified before them. This change was made because the behavior of applying these ranking rules before or without `words` was unintuitive and could hurt relevancy.
 - Split words are now looked for for digrams. This means that the query `whit ehorse` may now match documents containing `white horse`, which improves the relevancy of typo tolerance.
 - ngrams and split words are now disadvantaged in comparison to the exact word in the `typo` ranking rule.
-- Exactness will not prioritize documents containing exact words which were previously removed by the `words` ranking rule anymore. For example, when using the query `Batman: the dark knight rises` with the default term matching strategy (`last`), documents with a title starting with `Batman: the dark knight` will now be returned before documents that contain additional terms like `Batman: the dark knight crashes`, which improves relevancy. Congratulations if you read so far. Similarly, with the query: `Batman the supercalifragilisticexpialidocious knight rises`. Then the `Last` term matching strategy will reduce the query to `Batman the`. Exactness will then only prioritise documents that contain the exact words `Batman` and `the` but not `supercalifragilisticexpialidocious`, `knight`, or `rises`. 
+- The "iterative" version of ranking rules are now removed (https://github.com/meilisearch/meilisearch/issues/3356). The iterative version of algorithms would be applied depending on internal factors and would sometimes differ greatly in relevancy from the base ranking rule, leading to inconsistent relevancy.
+- Exactness will not prioritize documents containing exact words which were previously removed by the `words` ranking rule anymore. For example, when using the query `Batman: the dark knight rises` with the default term matching strategy (`last`), documents with a title starting with `Batman: the dark knight` will now be returned before documents that contain additional terms like `Batman: the dark knight crashes`, which improves relevancy. Congratulations if you read so far. Similarly, with the query: `Batman the supercalifragilisticexpialidocious knight rises`. Then the `Last` term matching strategy will reduce the query to `Batman the`. Exactness will then only prioritise documents that contain the exact words `Batman` and `the` but not `supercalifragilisticexpialidocious`, `knight`, or `rises`.
 
+### Unblocking features
+
+v1.2 brings a massive refactor of the search engine that unblocks the implementation of user-requested features in the future:
+
+- Separating the `attribute` and `position` ranking rules: https://github.com/meilisearch/meilisearch/issues/3222
+- Limiting the search to specific attributes (`words in [title, genres]`): https://github.com/meilisearch/product/discussions/595
+- More term matching strategies: https://github.com/meilisearch/meilisearch/issues/3424
+- Setting ranking rule at search time: https://github.com/meilisearch/meilisearch/issues/3425
+- Scoring search results: https://github.com/meilisearch/product/discussions/594
 
 Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
