Add automated task deletion

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -157,9 +157,17 @@ v1.2 brings a massive refactor of the search engine that unblocks the implementa
 
 Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
-## Prevent Meilisearch to stop receiving task by removing tasks automatically
+## Task auto-deletion
 
-TBD
+Definite fix for #3622.
+
+We've added a limit (1M) to the maximum number of tasks the task queue can hold.
+Once the task queue reaches this limit (1M of tasks are in the task queue, whatever their status is), a task deletion will be scheduled and try to delete the oldest 100k tasks.
+If the 100k tasks can't be deleted due to some of them being unfinished, we will delete as many tasks as possible.
+If the limit is reached, you’ll still be able to register new tasks. The engine will only stop you from adding new tasks once the hard limit of 10GiB of tasks is reached (that’s between 5M and 15M of tasks depending on your workflow).
+
+Technically, we won't enqueue a task unless we can guarantee it will be processed right away.
+If the automated task deletion doesn’t delete anything, we won't enqueue any more tasks and log a warning for the user to know that the engine is not working properly.
 
 Done by @irevoire in #3693.
 
