--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -157,7 +157,7 @@ v1.2 brings a massive refactor of the search engine that unblocks the implementa
 
 Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
-## Task auto-deletion
+## Automated task deletion
 
 Definite fix for #3622.
 
