--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -150,7 +150,7 @@ Done by @Kerollmops in #3571.
 v1.2 brings a massive refactor of the search engine that unblocks the implementation of user-requested features in the future:
 
 - Separating the `attribute` and `position` ranking rules: https://github.com/meilisearch/meilisearch/issues/3222
-- Limiting the search to specific attributes (`words in [title, genres]`): https://github.com/meilisearch/product/discussions/595
+- Limiting the search to a specific subset of searchable attributes: https://github.com/meilisearch/product/discussions/595
 - More term matching strategies: https://github.com/meilisearch/meilisearch/issues/3424
 - Setting ranking rule at search time: https://github.com/meilisearch/meilisearch/issues/3425
 - Scoring search results: https://github.com/meilisearch/product/discussions/594
