First update after new changelogs

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -17,18 +17,10 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Delete documents by filter
 
-Expose a new route to delete documents by filters.
-As always, the fields you're filtering on must be set as [filterable](https://www.meilisearch.com/docs/reference/api/settings#update-filterable-attributes).
+Expose a new route to delete documents by filters. As always, the fields you're filtering on must be set as [filterable](https://www.meilisearch.com/docs/reference/api/settings#update-filterable-attributes).
 
-The new route is located under `/indexes/:uid/documents/delete` and must be called with an HTTP `POST` request.
-Its payload is a single JSON object containing the filter:
-```json
-{
-  "filter": ["doggo = 'bernese mountain'", "face = cute"]
-}
-```
+The new route is located under `/indexes/:uid/documents/delete` and must be called with an HTTP `POST` request. Here is an example of usage using curl:
 
-Here is an example of usage using curl:
 ```bash
 curl -X POST http://localhost:7700/indexes/dogs/documents/delete \
   -H 'Content-Type: application/json' \
@@ -36,6 +28,7 @@ curl -X POST http://localhost:7700/indexes/dogs/documents/delete \
 ```
 
 As always, this returns a sum up of the task:
+
 ```json
 {
   "taskUid": 242,
@@ -46,9 +39,8 @@ As always, this returns a sum up of the task:
 }
 ```
 
-Which you can then query in the task queue. As you can see, this new task
-is still considered as a `documentsDeletion` but a new field appeared in its details!
-It now contains the original filter.
+Which you can then query in the task queue using the [task route](https://www.meilisearch.com/docs/reference/api/tasks#get-one-task).
+
 ```json
 {
   "uid": 242,
@@ -73,14 +65,12 @@ Done by @dureuill and @irevoire in #3550.
 
 ## Get documents by filter
 
-To help you with the document deletion by filters, we also decided to let you get documents by filters.
-This means the `GET` `/indexes/:uid/documents` route now also supports receiving a filter.
+To help you with the document deletion by filters, we also decided to let you get documents by filters. This means the `GET` `/indexes/:uid/documents` route now also supports receiving a filter.
 
-And since many of you had really large filters to send that would definitely not fit in an URL, we also crafted a new route that you can access
-with the HTTP `POST` verb with the same parameter. It's located under `/indexes/:uid/documents/fetch` and
-can be accessed with the `limit`, `offset`, `fields`, and `filter` parameters.
+And since many of you had really large filters to send that would definitely not fit in an URL, we also crafted a new route that you can access with the HTTP `POST` verb with the same parameter. It's located under `/indexes/:uid/documents/fetch` and can be accessed with the `limit`, `offset`, `fields`, and `filter` parameters.
 
 Here is an example of usage:
+
 ```bash
 curl -X POST http://localhost:7700/indexes/dogs/documents/fetch \
   -H 'Content-Type: application/json' \
