Update after review 2

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -24,7 +24,7 @@ The new route is located under `/indexes/:uid/documents/delete` and must be call
 ```bash
 curl -X POST http://localhost:7700/indexes/dogs/documents/delete \
   -H 'Content-Type: application/json' \
-  --data-binary '{ "filter": "doggo = golden" }'
+  --data-binary '{ "filter": ["doggo = 'bernese mountain'", "face = cute"] }'
 ```
 
 As always, this returns a sum up of the task:
@@ -77,6 +77,8 @@ curl -X POST http://localhost:7700/indexes/dogs/documents/fetch \
   --data-binary '{ "limit": 1, "filter": "doggo = bernese" }'
 ```
 
+As for the previous point, the fields you're filtering on must be set as [filterable](https://www.meilisearch.com/docs/reference/api/settings#update-filterable-attributes).
+
 Done by @dureuill and @irevoire in #3570.
 
 ## New filter operators: `IS EMPTY` and `IS NULL`
@@ -115,16 +117,9 @@ Done by @Kerollmops in #3571.
 
 ## Improve relevancy and search performance
 
-- The fastest 75 percent of queries now consistently answer below 50ms on our test setup (TBC on the cloud).
-- The complexity of a search query is now limited, in order to limit CPU time and RAM consumption. In more details:
-  - The number of typo considered for a single term is now limited to 150 for 1 typo, 50 for 2 typos. Similarly, the number of considered (single word or multi word) synonyms is limited to 50, the total number of words for all synonyms of a term is limited to 100.
-  - The number of words considered in a query is now limited to 1000. The number of terms (words not inside a phrase, and individual phrases) was and is still limited to 10, so this change only impacts queries containing very long phrases.
-- Solves some performance issues: https://github.com/meilisearch/meilisearch/issues/3124, https://github.com/meilisearch/meilisearch/issues/3378, https://github.com/meilisearch/meilisearch/issues/2202, https://github.com/meilisearch/meilisearch/issues/3123
+v1.2 brings a massive refactor of the search engine that brings perforance but also relevancy improvements.
 
-### Performance of `geosort`
-
-- Improved performance when there are only a few documents to geosort.
-- Descending sort is now as performant as ascending sort.
+Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
 
 ### Relevancy improvements
 
@@ -135,29 +130,26 @@ Done by @Kerollmops in #3571.
 - The "iterative" version of ranking rules are now removed (https://github.com/meilisearch/meilisearch/issues/3356). The iterative version of algorithms would be applied depending on internal factors and would sometimes differ greatly in relevancy from the base ranking rule, leading to inconsistent relevancy.
 - Exactness will not prioritize documents containing exact words which were previously removed by the `words` ranking rule anymore. For example, when using the query `Batman: the dark knight rises` with the default term matching strategy (`last`), documents with a title starting with `Batman: the dark knight` will now be returned before documents that contain additional terms like `Batman: the dark knight crashes`, which improves relevancy. Congratulations if you read so far. Similarly, with the query: `Batman the supercalifragilisticexpialidocious knight rises`. Then the `Last` term matching strategy will reduce the query to `Batman the`. Exactness will then only prioritise documents that contain the exact words `Batman` and `the` but not `supercalifragilisticexpialidocious`, `knight`, or `rises`.
 
-### Unblocking features
+### Performance improvements
 
-v1.2 brings a massive refactor of the search engine that unblocks the implementation of user-requested features in the future:
-
-- Separating the `attribute` and `position` ranking rules: https://github.com/meilisearch/meilisearch/issues/3222
-- Limiting the search to a specific subset of searchable attributes: https://github.com/meilisearch/product/discussions/595
-- More term matching strategies: https://github.com/meilisearch/meilisearch/issues/3424
-- Setting ranking rule at search time: https://github.com/meilisearch/meilisearch/issues/3425
-- Scoring search results: https://github.com/meilisearch/product/discussions/594
-
-Done by @loiclec, @dureuill, @ManyTheFish, @Kerollmops and @irevoire in #3542.
+- The fastest 75 percent of queries now consistently answer below 50ms on our test setup.
+- The complexity of a search query is now limited, in order to limit CPU time and RAM consumption. In more details:
+  - The number of typo considered for a single term is now limited to 150 for 1 typo, 50 for 2 typos. Similarly, the number of considered (single word or multi word) synonyms is limited to 50, the total number of words for all synonyms of a term is limited to 100.
+  - The number of words considered in a query is now limited to 1000. The number of terms (words not inside a phrase, and individual phrases) was and is still limited to 10, so this change only impacts queries containing very long phrases.
+- Solves some performance issues: https://github.com/meilisearch/meilisearch/issues/3124, https://github.com/meilisearch/meilisearch/issues/3378, https://github.com/meilisearch/meilisearch/issues/2202, https://github.com/meilisearch/meilisearch/issues/3123
+- Geo search improvements
+  - Improved performance when there are only a few documents to geosort.
+  - Descending sort is now as performant as ascending sort.
 
 ## Automated task deletion
 
-Definite fix for #3622.
+Definitely fixes for #3622: Meilisearch does not have any issue anymore enqueuing new tasks when the DB is full. How? Meilisearch now has a limit (1M) to the maximum number of tasks the task queue can hold.
 
-We've added a limit (1M) to the maximum number of tasks the task queue can hold.
-Once the task queue reaches this limit (1M of tasks are in the task queue, whatever their status is), a task deletion will be scheduled and try to delete the oldest 100k tasks.
-If the 100k tasks can't be deleted due to some of them being unfinished, we will delete as many tasks as possible.
+Once the task queue reaches this limit (1M of tasks are in the task queue, whatever their status is), a task deletion will be scheduled and try to delete the oldest 100k tasks. If the 100k tasks can't be deleted due to some of them being unfinished, we will delete as many tasks as possible.
 If the limit is reached, you’ll still be able to register new tasks. The engine will only stop you from adding new tasks once the hard limit of 10GiB of tasks is reached (that’s between 5M and 15M of tasks depending on your workflow).
 
-Technically, we won't enqueue a task unless we can guarantee it will be processed right away.
-If the automated task deletion doesn’t delete anything, we won't enqueue any more tasks and log a warning for the user to know that the engine is not working properly.
+Technically, Meilisearch won't enqueue a task unless it can guarantee it will be processed right away.
+In case of issue, for example if the automated task deletion doesn’t delete anything, it won't enqueue any more tasks and log a warning for the user to know that the engine is not working properly.
 
 Done by @irevoire in #3693.
 
