add an example of usage of the get document by filter with the GET verb

--- a/meilisearch-release-changelog/v1.2.0.md
+++ b/meilisearch-release-changelog/v1.2.0.md
@@ -66,6 +66,9 @@ Done by @dureuill and @irevoire in #3550.
 ## Get documents by filter
 
 To help you with the document deletion by filters, we also decided to let you get documents by filters. This means the `GET` `/indexes/:uid/documents` route now also supports receiving a filter.
+```bash
+curl -X GET 'http://localhost:7700/indexes/dogs/documents?limit=1&filter=doggo=bernese'
+```
 
 And since many of you had really large filters to send that would definitely not fit in an URL, we also crafted a new route that you can access with the HTTP `POST` verb with the same parameter. It's located under `/indexes/:uid/documents/fetch` and can be accessed with the `limit`, `offset`, `fields`, and `filter` parameters.
 
